
@startuml
!theme plain
hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam entity {
  BackgroundColor White
  BorderColor Black
}

entity "utilisateurs" as utilisateurs {
  *id : BIGINT PK
  prenom : VARCHAR(120)
  nom : VARCHAR(120)
  email : VARCHAR(255) UNIQUE
  username : VARCHAR(80) UNIQUE
  mot_de_passe : VARCHAR(255)
  telephone : VARCHAR(40)
  role : ENUM
  is_active : BOOLEAN
  avatar_url : VARCHAR(500)
  adresse : VARCHAR(500)
  last_login : DATETIME
  created_at : DATETIME
  updated_at : DATETIME
}

entity "enfants" as enfants {
  *id : BIGINT PK
  numero_dossier : VARCHAR(30) UNIQUE
  prenom : VARCHAR(120)
  nom : VARCHAR(120)
  date_naissance : DATE
  genre : ENUM
  statut : ENUM
  date_inscription : DATE
  notes_confidentielles : TEXT
  created_by : BIGINT FK
  created_at : DATETIME
  updated_at : DATETIME
}

entity "fiche_enfant" as fiche_enfant {
  *enfant_id : BIGINT PK/FK
  ...
}

entity "parents_fiche" as parents_fiche {
  *enfant_id : BIGINT PK/FK
  ...
}

entity "parents_enfants" as parents_enfants {
  *parent_id : BIGINT FK
  *enfant_id : BIGINT FK
  relation : ENUM
  is_guardian : BOOLEAN
  created_at : DATETIME
  updated_at : DATETIME
}

entity "annees_scolaires" as annees_scolaires {
  *id : SMALLINT PK
  label : VARCHAR(9) UNIQUE
  date_debut : DATE
  date_fin : DATE
  est_active : BOOLEAN
  created_at : DATETIME
  updated_at : DATETIME
}

entity "groupes" as groupes {
  *id : BIGINT PK
  code : VARCHAR(20) UNIQUE
  nom : VARCHAR(150)
  description : TEXT
  capacite : SMALLINT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "groupes_annees" as groupes_annees {
  *id : BIGINT PK
  groupe_id : BIGINT FK
  annee_id : SMALLINT FK
  educateur_id : BIGINT FK
  statut : ENUM
  effectif_max : SMALLINT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "affectations_educateurs" as affectations_educateurs {
  *id : BIGINT PK
  groupe_annee_id : BIGINT FK
  educateur_id : BIGINT FK
  date_debut : DATE
  date_fin : DATE
  is_active : BOOLEAN
  created_at : DATETIME
  updated_at : DATETIME
}

entity "inscriptions_enfants" as inscriptions_enfants {
  *id : BIGINT PK
  enfant_id : BIGINT FK
  groupe_annee_id : BIGINT FK
  annee_id : SMALLINT FK
  date_entree : DATE
  date_sortie : DATE
  statut : ENUM
  created_at : DATETIME
  updated_at : DATETIME
}

entity "observation_initiale" as observation_initiale {
  *id : BIGINT PK
  enfant_id : BIGINT FK
  annee_id : SMALLINT FK
  educateur_id : BIGINT FK
  statut : ENUM
  date_observation : DATE
  contenu : JSON
  created_at : DATETIME
  updated_at : DATETIME
}

entity "pei_versions" as pei_versions {
  *id : BIGINT PK
  enfant_id : BIGINT FK
  annee_id : SMALLINT FK
  groupe_annee_id : BIGINT FK
  observation_id : BIGINT FK
  created_by : BIGINT FK
  version_number : INT
  status : ENUM
  est_actif : BOOLEAN
  effective_start : DATE
  effective_end : DATE
  motivation : TEXT
  previous_version_id : BIGINT FK
  created_at : DATETIME
  updated_at : DATETIME
}

entity "pei_objectifs" as pei_objectifs {
  *id : BIGINT PK
  pei_version_id : BIGINT FK
  titre : VARCHAR(255)
  description : TEXT
  priorite : ENUM
  source : ENUM
  ordre : INT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "pei_activites" as pei_activites {
  *id : BIGINT PK
  objectif_id : BIGINT FK
  titre : VARCHAR(255)
  description : TEXT
  frequence : VARCHAR(120)
  lieu : VARCHAR(120)
  statut : ENUM
  created_by : BIGINT FK
  created_at : DATETIME
  updated_at : DATETIME
}

entity "pei_evaluations" as pei_evaluations {
  *id : BIGINT PK
  pei_version_id : BIGINT FK
  objectif_id : BIGINT FK
  educateur_id : BIGINT FK
  evaluation_date : DATE
  cycle : ENUM
  score : TINYINT
  commentaires : TEXT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "pei_history_log" as pei_history_log {
  *id : BIGINT PK
  pei_version_id : BIGINT FK
  action : ENUM
  performed_by : BIGINT FK
  details_json : JSON
  created_at : DATETIME
}

entity "daily_notes" as daily_notes {
  *id : BIGINT PK
  enfant_id : BIGINT FK
  educateur_id : BIGINT FK
  pei_version_id : BIGINT FK
  pei_objectif_id : BIGINT FK
  note_date : DATE
  contenu : TEXT
  type : ENUM
  visibility : ENUM
  created_at : DATETIME
  updated_at : DATETIME
}

entity "threads" as threads {
  *id : BIGINT PK
  enfant_id : BIGINT FK
  created_by : BIGINT FK
  sujet : VARCHAR(255)
  is_group : BOOLEAN
  archived_at : DATETIME
  last_message_id : BIGINT FK
  created_at : DATETIME
  updated_at : DATETIME
}

entity "thread_participants" as thread_participants {
  *id : BIGINT PK
  thread_id : BIGINT FK
  user_id : BIGINT FK
  role : ENUM
  joined_at : DATETIME
  left_at : DATETIME
  created_at : DATETIME
  updated_at : DATETIME
}

entity "messages" as messages {
  *id : BIGINT PK
  thread_id : BIGINT FK
  sender_id : BIGINT FK
  contenu : TEXT
  kind : ENUM
  metadata : JSON
  created_at : DATETIME
  updated_at : DATETIME
}

entity "message_read_receipts" as message_read_receipts {
  *id : BIGINT PK
  message_id : BIGINT FK
  user_id : BIGINT FK
  read_at : DATETIME
}

entity "attachments" as attachments {
  *id : BIGINT PK
  uploader_id : BIGINT FK
  filename : VARCHAR(255)
  mime_type : VARCHAR(120)
  url : VARCHAR(500)
  size_bytes : BIGINT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "message_attachments" as message_attachments {
  *id : BIGINT PK
  message_id : BIGINT FK
  attachment_id : BIGINT FK
  created_at : DATETIME
  updated_at : DATETIME
}

entity "notifications" as notifications {
  *id : BIGINT PK
  utilisateur_id : BIGINT FK
  type : VARCHAR(80)
  titre : VARCHAR(255)
  corps : TEXT
  payload : JSON
  source_type : VARCHAR(80)
  source_id : BIGINT
  icon : VARCHAR(120)
  action_url : VARCHAR(500)
  lu_le : DATETIME
  created_at : DATETIME
  updated_at : DATETIME
}

entity "documents" as documents {
  *id : BIGINT PK
  titre : VARCHAR(255)
  contenu : TEXT
  fichier_url : VARCHAR(500)
  type : ENUM
  audience_scope : ENUM
  visible_from : DATETIME
  visible_to : DATETIME
  created_by : BIGINT FK
  is_archived : BOOLEAN
  legacy_source_table : VARCHAR(50)
  legacy_source_id : BIGINT
  created_at : DATETIME
  updated_at : DATETIME
}

entity "document_roles" as document_roles {
  *id : BIGINT PK
  document_id : BIGINT FK
  role : ENUM
  created_at : DATETIME
  updated_at : DATETIME
}

entity "document_groupes" as document_groupes {
  *id : BIGINT PK
  document_id : BIGINT FK
  groupe_id : BIGINT FK
  created_at : DATETIME
  updated_at : DATETIME
}

entity "document_enfants" as document_enfants {
  *id : BIGINT PK
  document_id : BIGINT FK
  enfant_id : BIGINT FK
  created_at : DATETIME
  updated_at : DATETIME
}

' Relationships
utilisateurs ||--o{ enfants : created_by
utilisateurs ||--o{ parents_enfants : parent
utilisateurs ||--o{ groupes_annees : educateur
utilisateurs ||--o{ affectations_educateurs : educateur
utilisateurs ||--o{ observation_initiale : educateur
utilisateurs ||--o{ pei_versions : createur
utilisateurs ||--o{ pei_activites : auteur
utilisateurs ||--o{ pei_evaluations : evaluateur
utilisateurs ||--o{ pei_history_log : auteur
utilisateurs ||--o{ daily_notes : educateur
utilisateurs ||--o{ threads : createur
utilisateurs ||--o{ thread_participants : participant
utilisateurs ||--o{ messages : sender
utilisateurs ||--o{ message_read_receipts : lecteur
utilisateurs ||--o{ attachments : uploader
utilisateurs ||--o{ notifications : destinataire
utilisateurs ||--o{ documents : auteur

parents_enfants }o--|| enfants
parents_enfants }o--|| utilisateurs

fiche_enfant }o--|| enfants
parents_fiche }o--|| enfants

enfants ||--o{ inscriptions_enfants
enfants ||--o{ observation_initiale
enfants ||--o{ pei_versions
enfants ||--o{ daily_notes
enfants ||--o{ threads
enfants ||--o{ document_enfants

annees_scolaires ||--o{ groupes_annees
annees_scolaires ||--o{ inscriptions_enfants
annees_scolaires ||--o{ observation_initiale
annees_scolaires ||--o{ pei_versions

groupes ||--o{ groupes_annees
groupes ||--o{ document_groupes

groupes_annees ||--o{ affectations_educateurs
groupes_annees ||--o{ inscriptions_enfants
groupes_annees ||--o{ pei_versions

observation_initiale }o--|| utilisateurs
observation_initiale }o--|| annees_scolaires

pei_versions }o--|| observation_initiale
pei_versions }o--|| groupes_annees
pei_versions ||--o{ pei_objectifs
pei_versions ||--o{ pei_evaluations
pei_versions ||--o{ pei_history_log
pei_versions ||--o{ daily_notes
pei_versions ||--o{ pei_versions : previous

pei_objectifs ||--o{ pei_activites
pei_objectifs ||--o{ daily_notes
pei_objectifs ||--o{ pei_evaluations

pei_activites }o--|| utilisateurs

daily_notes }o--|| enfants

daily_notes }o--|| pei_objectifs

daily_notes }o--|| pei_versions

threads ||--o{ thread_participants
threads ||--o{ messages
threads }o--|| enfants
threads }o--|| utilisateurs

thread_participants }o--|| utilisateurs
thread_participants }o--|| threads

messages }o--|| utilisateurs
messages }o--|| threads
messages ||--o{ message_read_receipts
messages ||--o{ message_attachments

message_read_receipts }o--|| utilisateurs

attachments }o--|| utilisateurs
message_attachments }o--|| messages
message_attachments }o--|| attachments

notifications }o--|| utilisateurs

documents }o--|| utilisateurs
documents ||--o{ document_roles
documents ||--o{ document_groupes
documents ||--o{ document_enfants

document_groupes }o--|| groupes

document_enfants }o--|| enfants

@enduml
